Bugfix for search field without icons and some jumping issues, fixes #2448

--- a/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeSearchBar/NodeTreeFilter/style.css
+++ b/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeSearchBar/NodeTreeFilter/style.css
@@ -1,9 +1,6 @@
 .searchBar {
     display: flex;
-}
-
-.searchBar__searchInput {
-    flex-grow: 1;
+    width: 160px;
 }
 
 .searchBar__clearButton {
