--- a/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeSearchBar/NodeTreeSearchInput/style.css
+++ b/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeSearchBar/NodeTreeSearchInput/style.css
@@ -1,24 +1,18 @@
 .searchInput {
-    flex-grow: 1;
-
     input {
         /* magic number, sorry */
         padding-left: 40px;
         border-radius: 0;
+
+        &:focus {
+            background: var(--colors-ContrastDark);
+            color: #fff;
+        }
     }
 }
 
 .clearButton {
-    background: var(--colors-ContrastNeutral);
-}
-.clearButton--focused {
-    background: white;
-}
-
-.wrapper {
-    display: flex;
-    border-right: 1px solid var(--colors-ContrastDark);
-    position: relative;
+    background: transparent;
 }
 
 .hidden {
@@ -29,4 +23,17 @@
     position: absolute;
     left: var(--spacing-Full);
     height: 40px;
+}
+
+.wrapper {
+    display: flex;
+    border-right: 1px solid var(--colors-ContrastDark);
+    position: relative;
+    width: 153px;
+}
+
+.wrapper--focused {
+    .clearButton {
+        background: var(--colors-ContrastDark);
+    }
 }
