--- a/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeSearchBar/style.css
+++ b/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeSearchBar/style.css
@@ -2,7 +2,7 @@
     position: relative;
 }
 .searchBar {
-    flex: 0 0 calc(var(--spacing-GoldenUnit) + 2px);
+    flex: 0 0 calc(var(--spacing-GoldenUnit) - 2px);
     display: flex;
     line-height: 0;
     border-bottom: 1px solid var(--colors-ContrastDark);
